BAD ALIGNMENT FIX IM SO SORRY

--- a/Michaela/bbvd_ny/style.css
+++ b/Michaela/bbvd_ny/style.css
@@ -240,6 +240,9 @@ body{
 .scooby__img:hover {
   animation: shakeX 0.5s ease-in-out; /* Adjust the duration and timing function as needed */
 }
+.scooby__img--video{
+  margin-left: 21px;
+}
 @keyframes shakeX {
   0%,
   100% {
@@ -262,6 +265,9 @@ body{
     }
     .scooby__info{
       grid-column: span 2;
+    }
+    .scooby__img--video{
+      margin-left: 9px;
     }
   }
   @media (min-width: 1000px){
